[gd_scene load_steps=8 format=2]

[ext_resource path="res://Monster/base/EnemyType1/EnemyType1.gd" type="Script" id=1]
[ext_resource path="res://Items/Passive/eraser.png" type="Texture" id=2]
[ext_resource path="res://Monster/base/EGridSnapper.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 123, 269, 11, 11 ), Rect2( 139, 269, 11, 11 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=4]
radius = 96.0

[node name="EnemyType1" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/default = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_rect = Rect2( 139, 269, 11, 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="DirTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="ChaseArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="EGridSnapper" type="Position2D" parent="."]
script = ExtResource( 3 )
[connection signal="timeout" from="DirTimer" to="." method="_on_DirTimer_timeout"]
